# ===================================================================
# CMAKE のおまじない
# ===================================================================


# ===================================================================
# プロジェクト名，バージョンの設定
# ===================================================================


# ===================================================================
# オプション
# ===================================================================


# ===================================================================
# パッケージの検査
# ===================================================================


# ===================================================================
# ヘッダファイルの生成
# ===================================================================


# ===================================================================
# インクルードパスの設定
# ===================================================================
include_directories (
  )


# ===================================================================
#  マクロの定義
# ===================================================================


# ===================================================================
# サブディレクトリの設定
# ===================================================================

#add_subdirectory ( cython-src )


# ===================================================================
#  ソースの設定
# ===================================================================

set (ym_mincov_SOURCES
  src/LbCS.cc
  src/LbMAX.cc
  src/LbMIS1.cc
  src/LbMIS2.cc
  src/LbMIS3.cc
  src/MaxClique.cc
  src/McMatrix.cc
  src/McSolver.cc
  src/McSolverImpl.cc
  src/MinCov.cc
  src/MisNodeHeap.cc
  src/SelCS.cc
  src/SelNaive.cc
  src/SelSimple.cc
  )


# ===================================================================
#  ターゲットの設定
# ===================================================================

ym_add_object_library ( ym_mincov
  ${ym_mincov_SOURCES}
  )
